[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.12.0"
rayon = "1.8.0"

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day1part2"
path = "src/day1part2.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"


[[bin]]
name = "day2part2"
path = "src/day2part2.rs"
